--- a/frontend/src/app/pages/password-forgot/password-forgot.component.html
+++ b/frontend/src/app/pages/password-forgot/password-forgot.component.html
@@ -18,7 +18,7 @@
       </button>
 
       <form>
-        <h2>Jetzt registrieren</h2>
+        <h2>Passwort wiederherstellen</h2>
         <div>
           <label for="inputEmail">E-Mail-Adresse:</label>
           <input
@@ -29,27 +29,26 @@
           />
         </div>
         <div class="mt-4 mb-4">
-          <label for="inputUsername">Username:</label>
-          <input
-            type="text"
-            id="inputUsername"
-            class="form-control"
-            placeholder="MaxMuster"
-          />
-        </div>
-
-        <div class="mt-4 mb-4">
-          <label for="inputPassword">Passwort:</label>
+          <label for="inputNewPassword1">Neues Passwort:</label>
           <input
             type="password"
-            id="inputPassword"
+            id="inputNewPassword1"
+            class="form-control"
+            placeholder="Passwort"
+          />
+        </div>
+        <div class="mt-4 mb-4">
+          <label for="inputNewPassword2">Passwort wiederholen:</label>
+          <input
+            type="password"
+            id="inputNewPassword2"
             class="form-control"
             placeholder="Passwort"
           />
         </div>
         <div class="d-flex justify-content-center">
           <button type="button" class="btn btn-warning btn-lg w-100">
-            Registrieren
+            Wiederherstellen
           </button>
         </div>
       </form>
