--- a/frontend/src/app/pages/registration/registration.component.html
+++ b/frontend/src/app/pages/registration/registration.component.html
@@ -49,7 +49,7 @@
       </div>
       <div class="d-flex justify-content-center">
         <button type="button" class="btn btn-warning btn-lg w-100">
-          Registriert
+          Registrieren
         </button>
       </div>
     </form>
