--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -45,7 +45,11 @@
             />
           </div>
           <div class="d-flex justify-content-center">
-            <button type="button" class="btn btn-warning btn-lg w-100">
+            <button
+              [routerLink]="['/homepage']"
+              type="button"
+              class="btn btn-warning btn-lg w-100"
+            >
               Anmelden
             </button>
           </div>
