--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -8,13 +8,23 @@
   <div class="col-md-2 shadow mx-3 box">
     <div class="row">
       <h2 class="d-flex justify-content-center">Spieler</h2>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Morbi leo risus</li>
-        <li class="list-group-item">Porta ac consectetur ac</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-      </ul>
+      <div class="list-group list-group-flush">
+        <button type="button" class="list-group-item list-group-item-action">
+          Cras justo odio
+        </button>
+        <button type="button" class="list-group-item list-group-item-action">
+          Dapibus ac facilisis in
+        </button>
+        <button type="button" class="list-group-item list-group-item-action">
+          Morbi leo risus
+        </button>
+        <button type="button" class="list-group-item list-group-item-action">
+          Porta ac consectetur ac
+        </button>
+        <button type="button" class="list-group-item list-group-item-action">
+          Vestibulum at eros
+        </button>
+      </div>
     </div>
   </div>
 
@@ -90,10 +100,14 @@
   <div class="col-md-2 shadow mx-3 box">
     <div class="row">
       <h2 class="d-flex justify-content-center">Freundesliste</h2>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-      </ul>
+      <div class="list-group list-group-flush">
+        <button type="button" class="list-group-item list-group-item-action">
+          Cras justo odio
+        </button>
+        <button type="button" class="list-group-item list-group-item-action">
+          Dapibus ac facilisis in
+        </button>
+      </div>
     </div>
   </div>
 </div>
