--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -28,8 +28,9 @@
     </div>
   </div>
 
-  <!-- Center Header-->
+  <!-- Center -->
   <div class="col-md-7 mx-3">
+    <!-- Center Header-->
     <div class="row d-flex align-items-center">
       <button
         class="col btn btn-outline-dark"
