Components for NavBar

--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -69,7 +69,7 @@
       class="shadow box"
       [ngClass]="toggleQuizGame ? ['displayShow'] : ['displayHide']"
     >
-      <p>GameArea</p>
+      <app-quiz-game></app-quiz-game>
     </div>
 
     <!-- ProfilArea -->
@@ -77,7 +77,7 @@
       class="shadow box"
       [ngClass]="toggleProfil ? ['displayShow'] : ['displayHide']"
     >
-      <p>Profil</p>
+      <app-profil></app-profil>
     </div>
 
     <!-- StatistikArea -->
@@ -85,7 +85,7 @@
       class="shadow box"
       [ngClass]="toggleStatistik ? ['displayShow'] : ['displayHide']"
     >
-      <p>Statistik</p>
+      <app-statistik> </app-statistik>
     </div>
 
     <!-- VerlaufArea -->
@@ -93,7 +93,7 @@
       class="shadow box"
       [ngClass]="toggleVerlauf ? ['displayShow'] : ['displayHide']"
     >
-      <p>Verlauf</p>
+      <app-verlauf></app-verlauf>
     </div>
   </div>
 
