--- a/frontend/src/app/pages/password-forgot/password-forgot.component.html
+++ b/frontend/src/app/pages/password-forgot/password-forgot.component.html
@@ -9,16 +9,16 @@
       </h1>
     </div>
     <div class="shadow p-5" style="border-radius: 25px">
-      <button
-        [routerLink]="['/login']"
-        style="border: none; background: none"
-        class="material-icons"
-      >
-        backspace
-      </button>
-
       <form>
-        <h2>Passwort wiederherstellen</h2>
+        <h2>
+          <button
+            [routerLink]="['/login']"
+            style="border: none; background: none"
+            class="material-icons"
+          >
+            backspace</button
+          >Passwort wiederherstellen
+        </h2>
         <div>
           <label for="inputEmail">E-Mail-Adresse:</label>
           <input
