--- a/frontend/src/app/pages/homepage/statistik/statistik.component.html
+++ b/frontend/src/app/pages/homepage/statistik/statistik.component.html
@@ -1,6 +1,6 @@
 <h2
   class="bg-warning text-dark font-weight-bold"
-  style="text-align: center; border-radius: 15px;"
+  style="text-align: center; border-radius: 15px"
 >
   Spieler Statistik
 </h2>
