--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -2,27 +2,9 @@
   class="main d-flex align-items-center justify-content-center"
   style="height: 100%"
 >
-  <div class="row px-2">
-    <!-- Leftside -->
-    <div class="col-6">
-      <h1 style="font-size: 75px; font-weight: bold">
-        Quiz<span class="text-warning">App</span>
-      </h1>
-      <h4>
-        Jeder Spieler registriert sich zunächst einmal. Daraufhin kann ich
-        andere Spieler als Freund hinzufugen. Mir wird auch angezeigt, ob
-        Spieler online sind. Ich kann einen Freund herausfordern und wenn dieser
-        annimmt sind wir in einem Duell. Ein Duell funktioniert wie Quizduell,
-        also wird erst dem einen, dann dem anderen die gleiche Frage gestellt
-        und es gibt jeweils vier Antwortmöglichkeiten. Insgesamt zehn Fragen pro
-        Duell. Es soll außerdem eine Statistik geben, wo ich sehen kann, wie
-        viele Spiele ich gewonnen habe und gegen wen ich so gespielt habe.
-        Admins sollen die Fragen verwalten können.
-      </h4>
-    </div>
-
+  <div class="row">
     <!-- Rightside -->
-    <div class="col-6 shadow p-5" style="border-radius: 25px">
+    <div class="col-lg-6 shadow p-5 mx-3" style="border-radius: 25px">
       <div>
         <form>
           <h2>Anmelden und loslegen</h2>
@@ -69,6 +51,23 @@
           </div>
         </form>
       </div>
+    </div>
+    <!-- Leftside -->
+    <div class="col-lg-5 mx-3">
+      <h1 style="font-size: 75px; font-weight: bold">
+        Quiz<span class="text-warning">App</span>
+      </h1>
+      <h4>
+        Jeder Spieler registriert sich zunächst einmal. Daraufhin kann ich
+        andere Spieler als Freund hinzufugen. Mir wird auch angezeigt, ob
+        Spieler online sind. Ich kann einen Freund herausfordern und wenn dieser
+        annimmt sind wir in einem Duell. Ein Duell funktioniert wie Quizduell,
+        also wird erst dem einen, dann dem anderen die gleiche Frage gestellt
+        und es gibt jeweils vier Antwortmöglichkeiten. Insgesamt zehn Fragen pro
+        Duell. Es soll außerdem eine Statistik geben, wo ich sehen kann, wie
+        viele Spiele ich gewonnen habe und gegen wen ich so gespielt habe.
+        Admins sollen die Fragen verwalten können.
+      </h4>
     </div>
   </div>
 </div>
