--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -1,3 +1,4 @@
+<!-- Title -->
 <header class="d-flex justify-content-center">
   <h1 style="font-size: 75px; font-weight: bold">
     Quiz<span class="text-warning">App</span>
@@ -5,12 +6,18 @@
 </header>
 <!-- LeftSide -->
 <div class="row d-flex justify-content-center">
-  <div class="col-md-2 shadow mx-3 box">
+  <div class="col-md-2 shadow box" style="overflow-y: scroll">
     <div class="row">
-      <h2 class="d-flex justify-content-center">Spieler</h2>
+      <h2 style="text-align: center" class="d-flex justify-content-center">
+        Spieler online
+      </h2>
       <div class="list-group list-group-flush">
-        <button type="button" class="list-group-item list-group-item-action">
+        <button
+          type="button"
+          class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+        >
           Cras justo odio
+          <span class="onlinedot mx-2"></span>
         </button>
         <button type="button" class="list-group-item list-group-item-action">
           Dapibus ac facilisis in
@@ -33,32 +40,29 @@
     <!-- Center Header-->
     <div class="row d-flex align-items-center">
       <button
-        class="col btn btn-outline-dark"
-        style="border: none"
+        class="col btn btn-outline-dark headerButton"
         (click)="showQuizGame()"
       >
         <h4>Quizgame</h4>
       </button>
       <button
-        class="col btn btn-outline-dark"
+        class="col btn btn-outline-dark headerButton"
         style="border: none"
         (click)="showProfil()"
       >
-        <h4 class="col" style="text-align: center">Profil</h4>
+        <h4 class="col">Profil</h4>
       </button>
       <button
-        class="col btn btn-outline-dark"
-        style="border: none"
+        class="col btn btn-outline-dark headerButton"
         (click)="showStatistik()"
       >
-        <h4 class="col" style="text-align: center">Statistik</h4>
+        <h4 class="col">Statistik</h4>
       </button>
       <button
-        class="col btn btn-outline-dark"
-        style="border: none"
+        class="col btn btn-outline-dark headerButton"
         (click)="showVerlauf()"
       >
-        <h4 class="col" style="text-align: center">Verlauf</h4>
+        <h4 class="col">Verlauf</h4>
       </button>
       <hr />
     </div>
@@ -98,7 +102,7 @@
   </div>
 
   <!-- RightSide -->
-  <div class="col-md-2 shadow mx-3 box">
+  <div class="col-md-2 shadow box" style="overflow-y: scroll">
     <div class="row">
       <h2 class="d-flex justify-content-center">Freundesliste</h2>
       <div class="list-group list-group-flush">
@@ -112,3 +116,14 @@
     </div>
   </div>
 </div>
+<footer class="row d-flex justify-content-center m-3">
+  <div class="col-md-6 shadow box d-flex align-items-center">
+    Spielerstatus:
+    <span class="onlinedot mx-2" style="background-color: #3a6b35"></span>
+    online
+    <span class="onlinedot mx-2"></span>
+    offline
+    <span class="onlinedot mx-2" style="background-color: orangered"></span>
+    ingame
+  </div>
+</footer>
