--- a/frontend/src/app/pages/homepage/verlauf/verlauf.component.html
+++ b/frontend/src/app/pages/homepage/verlauf/verlauf.component.html
@@ -4,4 +4,11 @@
 >
   Spiel Verlauf
 </h2>
-<div class="row d-flex justify-content-center"></div>
+<div class="row d-flex justify-content-center">
+  <div
+    class="m-2 col-md-8"
+    style="background-color: brown; text-align: center; border-radius: 15px"
+  >
+    <h2>Userone vs Usertwo</h2>
+  </div>
+</div>
