--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -14,7 +14,7 @@
               type="email"
               id="inputEmail"
               class="form-control"
-              placeholder="Max.Mustermann@gmail.com"
+              placeholder="Max-Mustermann@gmail.com"
             />
           </div>
           <div class="mt-4 mb-4">
