--- a/frontend/src/app/pages/homepage/profil/profil.component.html
+++ b/frontend/src/app/pages/homepage/profil/profil.component.html
@@ -4,3 +4,17 @@
 >
   Spieler Profil
 </h2>
+
+<!-- Body -->
+<div class="d-flex align-items-start" style="background-color: aquamarine">
+  <span
+    class="material-icons"
+    style="font-size: 140px; background-color: antiquewhite"
+    >face</span
+  >
+  <div class="row mx-3">
+    <h3>Username: Username</h3>
+    <h3>E-Mail: E-Mail</h3>
+  </div>
+</div>
+<!-- Bottom -->
