--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -17,7 +17,7 @@
           class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
         >
           Cras justo odio
-          <span class="onlinedot mx-2"></span>
+          <span class="onlinedot"></span>
         </button>
         <button type="button" class="list-group-item list-group-item-action">
           Dapibus ac facilisis in
