--- a/frontend/src/app/pages/password-forgot/password-forgot.component.html
+++ b/frontend/src/app/pages/password-forgot/password-forgot.component.html
@@ -9,49 +9,51 @@
       </h1>
     </div>
     <div class="shadow p-5" style="border-radius: 25px">
-      <form>
-        <h2>
-          <button
-            [routerLink]="['/login']"
-            style="border: none; background: none"
-            class="material-icons"
-          >
-            backspace</button
-          >Passwort wiederherstellen
-        </h2>
-        <div>
-          <label for="inputEmail">E-Mail-Adresse:</label>
-          <input
-            type="email"
-            id="inputEmail"
-            class="form-control"
-            placeholder="Max.Mustermann@gmail.com"
-          />
-        </div>
-        <div class="mt-4 mb-4">
-          <label for="inputNewPassword1">Neues Passwort:</label>
-          <input
-            type="password"
-            id="inputNewPassword1"
-            class="form-control"
-            placeholder="Passwort"
-          />
-        </div>
-        <div class="mt-4 mb-4">
-          <label for="inputNewPassword2">Passwort wiederholen:</label>
-          <input
-            type="password"
-            id="inputNewPassword2"
-            class="form-control"
-            placeholder="Passwort"
-          />
-        </div>
-        <div class="d-flex justify-content-center">
-          <button type="button" class="btn btn-warning btn-lg w-100">
-            Wiederherstellen
-          </button>
-        </div>
-      </form>
+      <h2>
+        <button
+          [routerLink]="['/login']"
+          style="border: none; background: none"
+          class="material-icons"
+        >
+          backspace</button
+        >Passwort wiederherstellen
+      </h2>
+      <div>
+        <label>E-Mail-Adresse:</label>
+        <input
+          type="email"
+          [(ngModel)]="inputEmail"
+          class="form-control"
+          placeholder="Max.Mustermann@gmail.com"
+        />
+      </div>
+      <div class="mt-4 mb-4">
+        <label>Neues Passwort:</label>
+        <input
+          type="password"
+          [(ngModel)]="inputPassword1"
+          class="form-control"
+          placeholder="Passwort"
+        />
+      </div>
+      <div class="mt-4 mb-4">
+        <label>Passwort wiederholen:</label>
+        <input
+          type="password"
+          [(ngModel)]="inputPassword2"
+          class="form-control"
+          placeholder="Passwort"
+        />
+      </div>
+      <div class="d-flex justify-content-center">
+        <button
+          type="button"
+          class="btn btn-warning btn-lg w-100"
+          (click)="submit()"
+        >
+          Wiederherstellen
+        </button>
+      </div>
     </div>
   </div>
 </div>
