--- a/frontend/src/app/pages/homepage/verlauf/verlauf.component.html
+++ b/frontend/src/app/pages/homepage/verlauf/verlauf.component.html
@@ -9,6 +9,6 @@
     class="m-2 col-md-8"
     style="background-color: brown; text-align: center; border-radius: 15px"
   >
-    <h2>Userone vs Usertwo</h2>
+    <h2>{{ userone }} vs {{ usertwo }}</h2>
   </div>
 </div>
