--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -6,50 +6,50 @@
     <!-- Rightside -->
     <div class="col-lg-6 shadow p-5 mx-3" style="border-radius: 25px">
       <div>
-        <form>
-          <h2>Anmelden und loslegen</h2>
-          <div>
-            <label for="inputEmail">E-Mail-Adresse:</label>
-            <input
-              type="email"
-              id="inputEmail"
-              class="form-control"
-              placeholder="Max-Mustermann@gmail.com"
-            />
-          </div>
-          <div class="mt-4 mb-4">
-            <label for="inputPassword">Passwort:</label>
-            <input
-              type="password"
-              id="inputPassword"
-              class="form-control"
-              placeholder="Passwort"
-            />
-          </div>
-          <div class="d-flex justify-content-center">
-            <button
-              [routerLink]="['/homepage']"
-              type="button"
-              class="btn btn-warning btn-lg w-100"
-            >
-              Anmelden
-            </button>
-          </div>
-          <div class="mt-3 mb-4 d-flex justify-content-center">
-            <a [routerLink]="['/passwordForgot']" href="#!"
-              >Passwort vergessen?</a
-            >
-          </div>
-          <div class="d-flex justify-content-center">
-            <button
-              [routerLink]="['/registration']"
-              class="btn btn-outline-warning btn-large"
-              type="button"
-            >
-              Neues Konto anlegen
-            </button>
-          </div>
-        </form>
+        <h2>Anmelden und loslegen</h2>
+        <div>
+          <label>E-Mail-Adresse:</label>
+          <input
+            type="email"
+            [(ngModel)]="inputEmail"
+            class="form-control"
+            placeholder="Max-Mustermann@gmail.com"
+          />
+        </div>
+        <div class="mt-4 mb-4">
+          <label>Passwort:</label>
+          <input
+            type="password"
+            [(ngModel)]="inputPassword"
+            class="form-control"
+            placeholder="Passwort"
+          />
+        </div>
+        <div class="d-flex justify-content-center">
+          <button
+            #btnSecondClick
+            [routerLink]="loginbool ? ['/homepage'] : []"
+            type="button"
+            class="btn btn-warning btn-lg w-100"
+            (click)="submit()"
+          >
+            Anmelden
+          </button>
+        </div>
+        <div class="mt-3 mb-4 d-flex justify-content-center">
+          <a [routerLink]="['/passwordForgot']" href="#!"
+            >Passwort vergessen?</a
+          >
+        </div>
+        <div class="d-flex justify-content-center">
+          <button
+            [routerLink]="['/registration']"
+            class="btn btn-outline-warning btn-large"
+            type="button"
+          >
+            Neues Konto anlegen
+          </button>
+        </div>
       </div>
     </div>
     <!-- Leftside -->
