--- a/frontend/src/app/pages/homepage/statistik/statistik.component.html
+++ b/frontend/src/app/pages/homepage/statistik/statistik.component.html
@@ -4,3 +4,17 @@
 >
   Spieler Statistik
 </h2>
+
+<div class="row m-3">
+  <div class="col-md-4 mx-3">
+    <h2>Spiele Gesamt: {{ userAllGames }}</h2>
+    <h2>Gewonnen: {{ userWins }}</h2>
+    <h2>Verloren: {{ userLoses }}</h2>
+  </div>
+  <div class="col-md-7">
+    <app-pie-chart></app-pie-chart>
+  </div>
+  <button class="col-md-4 bg-warning text-dark btn" (click)="resetStats()">
+    Statistik zurücksetzen
+  </button>
+</div>
