--- a/frontend/src/app/pages/homepage/quiz-game/quiz-game.component.html
+++ b/frontend/src/app/pages/homepage/quiz-game/quiz-game.component.html
@@ -1,6 +1,2 @@
-<h2
-  class="bg-warning text-dark font-weight-bold"
-  style="text-align: center; border-radius: 15px"
->
-  Quiz Game
-</h2>
+<h2 class="bg-warning text-dark titelText">Quiz Game</h2>
+<div></div>
