ModalWindow homepage leftside

--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -15,21 +15,11 @@
         <button
           type="button"
           class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModal"
         >
           Cras justo odio
           <span class="onlinedot"></span>
-        </button>
-        <button type="button" class="list-group-item list-group-item-action">
-          Dapibus ac facilisis in
-        </button>
-        <button type="button" class="list-group-item list-group-item-action">
-          Morbi leo risus
-        </button>
-        <button type="button" class="list-group-item list-group-item-action">
-          Porta ac consectetur ac
-        </button>
-        <button type="button" class="list-group-item list-group-item-action">
-          Vestibulum at eros
         </button>
       </div>
     </div>
@@ -128,3 +118,6 @@
     ingame
   </div>
 </footer>
+
+<!-- Needs to be addet. entrance for MoadalId -->
+<app-player-modal></app-player-modal>
