--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -16,7 +16,7 @@
           type="button"
           class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
           data-bs-toggle="modal"
-          data-bs-target="#exampleModal"
+          data-bs-target="#playerModal"
         >
           Cras justo odio
           <span class="onlinedot"></span>
