--- a/frontend/src/app/pages/homepage/player-modal/player-modal.component.html
+++ b/frontend/src/app/pages/homepage/player-modal/player-modal.component.html
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <div
   class="modal"
-  id="exampleModal"
+  id="playerModal"
   tabindex="-1"
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
@@ -9,7 +9,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="#exampleModalLabel">Spielerprofil</h5>
+        <h5 class="modal-title">Spielerprofil</h5>
         <button
           type="button"
           class="btn-close"
