--- a/frontend/src/app/pages/homepage/profil/profil.component.html
+++ b/frontend/src/app/pages/homepage/profil/profil.component.html
@@ -8,7 +8,7 @@
 <!-- Body -->
 <div class="d-flex align-items-start my-3">
   <span class="material-icons" style="font-size: 140px">person</span>
-  <div class="row mx-3 my-3">
+  <div class="mx-3 my-3">
     <h3>Username: {{ username }}</h3>
     <h3>E-Mail: {{ email }}</h3>
     <h3>Punkte: {{ points }} (Sieg +3 Niederlage -2 ?)</h3>
