--- a/frontend/src/app/pages/homepage/quiz-game/quiz-game.component.html
+++ b/frontend/src/app/pages/homepage/quiz-game/quiz-game.component.html
@@ -1,2 +1,47 @@
 <h2 class="bg-warning text-dark titelText">Quiz Game</h2>
-<div></div>
+<!-- Body -->
+<div
+  style="
+    height: 90%;
+    background-color: orange;
+    border-radius: 25px;
+    padding: 10px;
+  "
+>
+  <!-- Question -->
+  <div
+    class="bg-warning text-dark questionText d-flex justify-content-center align-items-center"
+    style="border-radius: 25px; padding: 10px"
+  >
+    <h4>Hauptstadt von Deutschland</h4>
+  </div>
+  <hr />
+
+  <!-- Answers -->
+  <div>
+    <div
+      class="bg-warning text-dark questionText d-flex justify-content-center align-items-center"
+      style="border-radius: 25px; padding: 10px; margin: 10px"
+    >
+      <h5>Istanbul</h5>
+    </div>
+    <div
+      class="bg-warning text-dark questionText d-flex justify-content-center align-items-center"
+      style="border-radius: 25px; padding: 10px; margin: 10px"
+    >
+      <h5>Berlin</h5>
+    </div>
+    <div
+      class="bg-warning text-dark questionText d-flex justify-content-center align-items-center"
+      style="border-radius: 25px; padding: 10px; margin: 10px"
+    >
+      <h5>Wiesbaden</h5>
+    </div>
+    <div
+      class="bg-warning text-dark questionText d-flex justify-content-center align-items-center"
+      style="border-radius: 25px; padding: 10px; margin: 10px"
+    >
+      <h5>Florida</h5>
+    </div>
+  </div>
+</div>
