Added Login and Registration

--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -71,7 +71,7 @@
       class="shadow box"
       [ngClass]="toggleProfil ? ['displayShow'] : ['displayHide']"
     >
-      <app-profil></app-profil>
+      <app-profil [userModel]="userModel" *ngIf="userModel"> </app-profil>>
     </div>
 
     <!-- StatistikArea -->
