--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -7,6 +7,9 @@
     <div class="col-lg-6 shadow p-5 mx-3" style="border-radius: 25px">
       <div>
         <h2>Anmelden und loslegen</h2>
+        <div *ngIf="showErrorMessage" class="alert alert-danger" role="alert">
+          <h4>{{ errorMessage }}</h4>
+        </div>
         <div>
           <label>E-Mail-Adresse:</label>
           <input
@@ -19,15 +22,16 @@
         <div class="mt-4 mb-4">
           <label>Passwort:</label>
           <input
-            type="password"
+            type="{{ showPassword ? 'text' : 'password' }}"
             [(ngModel)]="inputPassword"
             class="form-control"
             placeholder="Passwort"
           />
+          <input type="checkbox" [(ngModel)]="showPassword" class="mt-2 ml-4" />
+          <label>Show Password</label>
         </div>
         <div class="d-flex justify-content-center">
           <button
-            #btnSecondClick
             [routerLink]="loginbool ? ['/homepage'] : []"
             type="button"
             class="btn btn-warning btn-lg w-100"
