--- a/frontend/src/app/pages/homepage/quiz-game/quiz-game.component.css
+++ b/frontend/src/app/pages/homepage/quiz-game/quiz-game.component.css
@@ -2,3 +2,22 @@
   text-align: center;
   border-radius: 15px;
 }
+
+.questionField {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  padding: 10px;
+  background-color: rgb(255, 193, 7);
+}
+
+.answerField {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  padding: 10px;
+  background-color: rgb(255, 193, 7);
+  margin: 15px;
+}
