--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -11,12 +11,12 @@
           <h4>{{ errorMessage }}</h4>
         </div>
         <div>
-          <label>E-Mail-Adresse:</label>
+          <label>Nickname:</label>
           <input
-            type="email"
-            [(ngModel)]="inputEmail"
+            type="text"
+            [(ngModel)]="inputNickname"
             class="form-control"
-            placeholder="Max-Mustermann@gmail.com"
+            placeholder="MaxMuster"
           />
         </div>
         <div class="mt-4 mb-4">
