--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -20,7 +20,7 @@
           />
         </div>
         <div class="mt-4 mb-4">
-          <label>Passwort:</label>
+          <label>Passwortaa:</label>
           <input
             type="{{ showPassword ? 'text' : 'password' }}"
             [(ngModel)]="inputPassword"
