--- a/frontend/src/app/pages/homepage/player-modal/player-modal.component.html
+++ b/frontend/src/app/pages/homepage/player-modal/player-modal.component.html
@@ -1,38 +1,28 @@
-<!-- Modal -->
-<div
-  class="modal"
-  id="playerModal"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Spielerprofil</h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <div class="d-flex align-items-start">
-          <span class="material-icons" style="font-size: 140px">person</span>
-          <div class="row mx-3 my-3">
-            <h5>Username:</h5>
-            <h5>E-Mail:</h5>
-            <h5>Punkte:</h5>
-          </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          Close
-        </button>
-        <button type="button" class="btn btn-primary">Freund hinzufügen</button>
-      </div>
+<div class="modal-header">
+  <h5 class="modal-title">Spielerprofil</h5>
+
+  <button
+    type="button"
+    class="btn-close"
+    (click)="closeModal()"
+    aria-label="Close"
+  ></button>
+</div>
+<div class="modal-body">
+  <div class="d-flex align-items-start">
+    <span class="material-icons" style="font-size: 140px">person</span>
+    <div class="row mx-3 my-3">
+      <h5>Username: {{ user!.username }}</h5>
+
+      <h5>Punkte: {{ user!.gamesWon }}</h5>
     </div>
   </div>
+</div>
+<div class="modal-footer">
+  <button type="button" class="btn btn-secondary" (click)="closeModal()">
+    Close
+  </button>
+  <button type="button" class="btn btn-primary" (click)="addFriend()">
+    Freund hinzufügen
+  </button>
 </div>
